--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -12,6 +12,9 @@ entries:
     - output: web,pdf
       title: Node_cluster
       url: Node_cluster.html
+    - output: web,pdf
+      title: Title
+      url: tree_clusters.html
     output: web
     title: HierarchicalGeoClustering
   output: web
