--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -64,4 +64,4 @@ plugins:
     
 remote_theme: fastai/nbdev-jekyll-theme
 baseurl: /HierarchicalGeoClustering/
-theme: jekyll-theme-slate
+theme: jekyll-theme-merlot
