--- a/settings.ini
+++ b/settings.ini
@@ -11,7 +11,7 @@ description = A Python library for hierarchical clustering
 # keywords = some keywords
 author = Many
 author_email = msalazar@centrogeo.edu.mx
-copyright = CentroGeo 2021
+copyright = CentroGeo
 branch = master
 version = 0.0.1
 min_python = 3.7
