--- a/settings.ini
+++ b/settings.ini
@@ -8,7 +8,7 @@ repo_name = HierarchicalGeoClustering
 
 user = CentroGeo
 description = A Python library for hierarchical clustering
-# keywords = some keywords
+keywords = Geography Clustering
 author = Many
 author_email = msalazar@centrogeo.edu.mx
 copyright = CentroGeo
