--- a/settings.ini
+++ b/settings.ini
@@ -25,7 +25,7 @@ license = apache2
 status = 2
 
 # Optional. Same format as setuptools requirements
-requirements = rasterio pandas geopandas pysal scikit-learn seaborn scikit-image matplotlib geopy anytree kneed hdbscan cgal 
+requirements = rasterio pandas geopandas pysal scikit-learn seaborn scikit-image matplotlib geopy anytree kneed hdbscan
 # Optional. Same format as setuptools console_scripts
 # console_scripts = 
 # Optional. Same format as setuptools dependency-links
