--- a/settings.ini
+++ b/settings.ini
@@ -1,22 +1,31 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
-host = github
-lib_name = HierarchicalGeoClustering
+repo = HierarchicalGeoClustering
+lib_name = %(repo)s
+
 # For Enterprise Git add variable repo_name and company name
 repo_name = HierarchicalGeoClustering
-# company_name = nike
 
-user = CentroGeo
-description = A Python library for hierarchical clustering
-keywords = Geography Clustering
+
+
+### PyPI ###
+audience = Developers
 author = Many
 author_email = msalazar@centrogeo.edu.mx
-copyright = CentroGeo
-branch = master
-version = 0.0.1
-min_python = 3.7
-audience = Developers
+copyright = 2021 onwards CentroGeo
+description = A Python library for hierarchical clustering
+keywords = Geography Clustering
 language = English
+status = 3
+user = msalazarcgeo
+
+
+
+branch = main
+version = 0.2.0
+min_python = 3.11
+
+
 # Set to True if you want to create a more fancy sidebar.json than the default
 custom_sidebar = False
 # Add licenses and see current list in `setup.py`
@@ -26,19 +35,15 @@ status = 2
 
 # Optional. Same format as setuptools requirements
 requirements = rasterio pandas geopandas pysal scikit-learn seaborn scikit-image matplotlib geopy anytree kneed hdbscan
-# Optional. Same format as setuptools console_scripts
-# console_scripts = 
-# Optional. Same format as setuptools dependency-links
-# dep_links = 
 
-###
-# You probably won't need to change anything under here,
-#   unless you have some special requirements
-###
 
-# Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
-nbs_path = src
+### nbdev ###
 doc_path = _docs
+lib_path = cluster_bis
+nbs_path = src
+recursive = True
+tst_flags = notest
+put_version_in_init = True
 
 # Whether to look for library notebooks recursively in the `nbs_path` dir
 recursive = False
