Se añaden archivos a gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,7 @@ checklink/cookies.txt
 
 _docs/
 sidebar.yml
+src/_arreglar_natural.ipynb
+src/_AMEBA.ipynb
+src/_AMOEBA_GRAPH.ipynb
+src/_documentation.ipynb
