--- a/settings.ini
+++ b/settings.ini
@@ -60,9 +60,16 @@ git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
 #git_url = https://github.%(company_name)s.com/%(repo_name)s/%(lib_name)s/tree/%(branch)s/
 
 
-
-lib_path = %(lib_name)s
+### Docs ###
+branch = main
+custom_sidebar = False
+doc_host = https://%(user)s.github.io
+doc_baseurl = /%(repo)s
+git_url = https://github.com/%(user)s/%(repo)s
 title = %(lib_name)s
+
+
+
 
 #Optional advanced parameters
 #Monospace docstings: adds <pre> tags around the doc strings, preserving newlines/indentation.
