--- a/src/nbdev.yml
+++ b/src/nbdev.yml
@@ -1,9 +1,9 @@
 project:
-  output-dir: _docs
+  output-dir: _proc
 
 website:
   title: "HierarchicalGeoClustering"
-  site-url: "https://msalazarcgeo.github.io/HierarchicalGeoClustering/"
+  site-url: "https://msalazarcgeo.github.io/HierarchicalGeoClustering"
   description: "A Python library for hierarchical clustering"
   repo-branch: main
-  repo-url: "https://github.com/msalazarcgeo/HierarchicalGeoClustering/tree/main/"
+  repo-url: "https://github.com/msalazarcgeo/HierarchicalGeoClustering"
