--- a/settings.ini
+++ b/settings.ini
@@ -1,12 +1,30 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified
+# All sections below are required unless otherwise specified.
+# See https://github.com/AnswerDotAI/nbdev/blob/main/settings.ini for examples.
+
+### Python library ###
 repo = HierarchicalGeoClustering
 lib_name = %(repo)s
+version = 0.0.1
+min_python = 3.11
+license = apache2
+black_formatting = False
 
-# For Enterprise Git add variable repo_name and company name
-repo_name = HierarchicalGeoClustering
+### nbdev ###
+doc_path = products
+lib_path = HierarchicalGeoClustering
+nbs_path = src
+recursive = True
+tst_flags = notest
+put_version_in_init = True
 
-
+### Docs ###
+branch = main
+custom_sidebar = False
+doc_host = https://%(user)s.github.io
+doc_baseurl = /%(repo)s
+git_url = https://github.com/%(user)s/%(repo)s
+title = %(lib_name)s
 
 ### PyPI ###
 audience = Developers
@@ -19,66 +37,9 @@ language = English
 status = 3
 user = msalazarcgeo
 
-
-
-branch = main
-version = 0.2.0
-min_python = 3.11
-
-
-# Set to True if you want to create a more fancy sidebar.json than the default
-custom_sidebar = False
-# Add licenses and see current list in `setup.py`
-license = apache2
-# From 1-7: Planning Pre-Alpha Alpha Beta Production Mature Inactive
-
-
-# Optional. Same format as setuptools requirements
-requirements = rasterio pandas geopandas pysal scikit-learn seaborn scikit-image matplotlib geopy anytree kneed hdbscan
-
-
-### nbdev ###
-doc_path = _docs
-nbs_path = src
-recursive = True
-tst_flags = notest
-put_version_in_init = True
-
-
-# Anything shown as '%(...)s' is substituted with that setting automatically
-#doc_host =  https://%(user)s.github.io
-#For Enterprise Git pages use:  
-#doc_host = https://pages.github.%(company_name)s.com.  
-
-
-doc_baseurl = /%(lib_name)s/
-# For Enterprise Github pages docs use:
-# doc_baseurl = /%(repo_name)s/%(lib_name)s/
-
-git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
-# For Enterprise Github use:
-#git_url = https://github.%(company_name)s.com/%(repo_name)s/%(lib_name)s/tree/%(branch)s/
-
-
-### Docs ###
-branch = main
-custom_sidebar = False
-doc_host = https://%(user)s.github.io
-doc_baseurl = /%(repo)s
-git_url = https://github.com/%(user)s/%(repo)s
-title = %(lib_name)s
-
-
-
-
-#Optional advanced parameters
-#Monospace docstings: adds <pre> tags around the doc strings, preserving newlines/indentation.
-#monospace_docstrings = False
-#Test flags: introduce here the test flags you want to use separated by |
-#tst_flags = 
-#Custom sidebar: customize sidebar.json yourself for advanced sidebars (False/True)
-#custom_sidebar = 
-#Cell spacing: if you want cell blocks in code separated by more than one new line
-#cell_spacing = 
-#Custom jekyll styles: if you want more jekyll styles than tip/important/warning, set them here
-#jekyll_styles = note,warning,tip,important
+### Optional ###
+# requirements = fastcore pandas
+# dev_requirements = 
+# console_scripts =
+# conda_user = 
+# package_data =
