--- a/.gitignore
+++ b/.gitignore
@@ -143,8 +143,12 @@ checklink/cookies.txt
 
 _docs/
 _proc/
+products/
+index_files/
 sidebar.yml
 src/_arreglar_natural.ipynb
 src/_AMEBA.ipynb
 src/_AMOEBA_GRAPH.ipynb
 src/_documentation.ipynb
+
+
