--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,6 +11,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    with:
+      python-version: "3.11"
+
     steps: 
       - uses: fastai/workflows/quarto-ghp@master
         with:
