--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,6 +32,9 @@ jobs:
           pip install -Uq pandas
           pip install -Uq anytree
           pip install -Uq shapely
+          pip install -Uq geopandas
+          pip install -Uq kneed
+          pip install -Uq graph_tool
           nbdev_docs
           pwd
           ls
