--- a/settings.ini
+++ b/settings.ini
@@ -11,7 +11,7 @@ license = apache2
 black_formatting = False
 
 ### nbdev ###
-doc_path = docs
+doc_path = _docs
 lib_path = HierarchicalGeoClustering
 nbs_path = src
 recursive = True
