--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,7 +36,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force_orphan: true
-          publish_dir: ./_docs
+          publish_dir: ./docs
           # The following lines assign commit authorship to the official GH-Actions bot for deploys to `gh-pages` branch.
           # You can swap them out with your own user credentials.
           user_name: github-actions[bot]
