--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,11 +32,12 @@ jobs:
           pip install -Uq geopandas
           pip install -Uq kneed
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+        uses: peaceiris/actions-gh-pages@v5
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force_orphan: true
           publish_dir: ./docs
+          enable_jekyll: true
           # The following lines assign commit authorship to the official GH-Actions bot for deploys to `gh-pages` branch.
           # You can swap them out with your own user credentials.
           user_name: github-actions[bot]
