--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,12 +31,15 @@ jobs:
           pip install -Uq shapely
           pip install -Uq geopandas
           pip install -Uq kneed
+          nbdev_docs
+
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force_orphan: true
-          publish_dir: ./docs
+          publish_dir: ./_docs
           enable_jekyll: true
           # The following lines assign commit authorship to the official GH-Actions bot for deploys to `gh-pages` branch.
           # You can swap them out with your own user credentials.
