--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,7 +31,8 @@ jobs:
           pip install -Uq shapely
           pip install -Uq geopandas
           pip install -Uq kneed
-          pip install --user graphtools
+          install python3-graph-tool
+          
           nbdev_docs
 
 
