--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,7 +16,17 @@ jobs:
       - uses: actions/setup-python@v4
         with: 
           python-version: '3.11'
-      - name: Install Dependencies
+      - name: Install Nbdev Dependencies
+        shell: bash
+        run: |
+          python -m pip install --upgrade pip
+          pip install -Uq git+https://github.com/fastai/ghapi.git # you need this for enabling pages
+          pip install -Uq git+https://github.com/fastai/fastcore.git
+          pip install -Uq git+https://github.com/fastai/execnb.git
+          pip install -U git+https://github.com/fastai/nbdev.git
+          wget -q $(curl https://latest.fast.ai/pre/quarto-dev/quarto-cli/linux-amd64.deb)
+          sudo dpkg -i quarto*.deb
+      - name: Install Package Dependencies
         env:
           USE_PRE: ${{ inputs.pre }}
         shell: bash
