--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,6 +33,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -Uq nbdev
+          pip install -Uq cgal
           pip install -Uq matplotlib
           pip install -Uq setuptools
           pip install -Uq scikit-learn
