--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,41 +12,32 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps: 
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: conda-incubator/setup-miniconda@v3
         with: 
-          python-version: '3.11'
-      - name: Install Nbdev Dependencies
-        shell: bash
+          python-version: 3.11
+          mamba-version: "*"
+          channels: conda-forge,defaults
+          channel-priority: true
+          activate-environment: anaconda-client-env
+          environment-file: etc/example-environment.yml
+      - name: Install Nbdev Dependencies and package dependencies
+        shell: bash -el {0}
         run: |
-          python -m pip install --upgrade pip
-          pip install -Uq git+https://github.com/fastai/ghapi.git # you need this for enabling pages
-          pip install -Uq git+https://github.com/fastai/fastcore.git
-          pip install -Uq git+https://github.com/fastai/execnb.git
-          pip install -U git+https://github.com/fastai/nbdev.git
-          wget -q $(curl https://latest.fast.ai/pre/quarto-dev/quarto-cli/linux-amd64.deb)
-          sudo dpkg -i quarto*.deb
-      - name: Install Package Dependencies
-        env:
-          USE_PRE: ${{ inputs.pre }}
-        shell: bash
-        run: |
-          python -m pip install --upgrade pip
-          pip install -Uq nbdev
-          pip install -Uq cgal
-          pip install -Uq matplotlib
-          pip install -Uq setuptools
-          pip install -Uq scikit-learn
-          pip install -Uq pandas
-          pip install -Uq anytree
-          pip install -Uq shapely
-          pip install -Uq geopandas
-          pip install -Uq kneed
-          sudo apt install -y python3-graph-tool
+          
+          mamba install nbdev
+          mamba install cgal
+          mamba install matplotlib
+          mamba install setuptools
+          mamba install scikit-learn
+          mamba install pandas
+          mamba install anytree
+          mamba install shapely
+          mamba install geopandas
+          mamba install kneed
+          mamba install graph-tool
           
           nbdev_docs
-
-
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
