changes deploy to run mamba

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,7 +37,7 @@ jobs:
           mamba install graph-tool
           mamba install hdbscan
       - name: Build documentation
-        shell: bash 
+        shell: bash -el {0}
         run: |
           nbdev_docs
       - name: Deploy to GitHub Pages
