--- a/settings.ini
+++ b/settings.ini
@@ -1,32 +1,22 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified.
-# See https://github.com/AnswerDotAI/nbdev/blob/main/settings.ini for examples.
-
-### Python library ###
 repo = HierarchicalGeoClustering
-lib_name = %(repo)s
-version = 0.0.1
+lib_name = HierarchicalGeoClustering
+version = 0.0.3
 min_python = 3.10
 license = apache2
 black_formatting = False
-
-### nbdev ###
 doc_path = _docs
 lib_path = HierarchicalGeoClustering
 nbs_path = src
 recursive = True
 tst_flags = notest
 put_version_in_init = True
-
-### Docs ###
 branch = main
 custom_sidebar = False
-doc_host = https://%(user)s.github.io
-doc_baseurl = /%(repo)s
-git_url = https://github.com/%(user)s/%(repo)s
-title = %(lib_name)s
-
-### PyPI ###
+doc_host = https://msalazarcgeo.github.io
+doc_baseurl = /HierarchicalGeoClustering
+git_url = https://github.com/msalazarcgeo/HierarchicalGeoClustering
+title = HierarchicalGeoClustering
 audience = Developers
 author = Many
 author_email = msalazar@centrogeo.edu.mx
@@ -36,10 +26,12 @@ keywords = Geography Clustering
 language = English
 status = 3
 user = msalazarcgeo
+readme_nb = index.ipynb
+allowed_metadata_keys = 
+allowed_cell_metadata_keys = 
+jupyter_hooks = False
+clean_ids = True
+clear_all = False
+cell_number = True
+skip_procs = 
 
-### Optional ###
-# requirements = fastcore pandas
-# dev_requirements = 
-# console_scripts =
-# conda_user = 
-# package_data =
