--- a/settings.ini
+++ b/settings.ini
@@ -5,7 +5,7 @@ version = 0.0.4
 min_python = 3.10
 license = apache2
 black_formatting = False
-doc_path = _docs
+doc_path = docs
 lib_path = HierarchicalGeoClustering
 nbs_path = src
 recursive = True
@@ -30,8 +30,6 @@ readme_nb = index.ipynb
 allowed_metadata_keys = 
 allowed_cell_metadata_keys = 
 jupyter_hooks = False
-clean_ids = True
 clear_all = False
 cell_number = True
-skip_procs = 
 
