--- a/.github/workflows/test_HGD.yaml
+++ b/.github/workflows/test_HGD.yaml
@@ -33,32 +33,14 @@ jobs:
           mamba install graph-tool
           mamba install hdbscan
           echo $(nbdev_bump_version)
-      - name: Test the package
-        shell: bash -l {0}
-        run: | 
-          echo "Check we are starting with clean git checkout"
-          if [[ `git status --porcelain -uno` ]]; then
-            git diff
-            echo "git status is not clean"
-            false
-          fi
-          echo "Trying to strip out notebooks"
-          nbdev_clean
-          echo "Check that strip out was unnecessary"
-          git status -s # display the status to see which nbs need cleaning up
-          if [[ `git status --porcelain -uno` ]]; then
-            git status -uno
-            echo -e "!!! Detected unstripped out notebooks\n!!!Remember to run nbdev_install_hooks"
-            echo -e "This error can also happen if you are using an older version of nbdev relative to what is in CI.  Please try to upgrade nbdev with the command `pip install -U nbdev`"
-            false
-          fi
-          nbdev_export
-          if [[ `git status --porcelain -uno` ]]; then
-            echo "::error::Notebooks and library are not in sync.  Please run nbdev_export."
-            git status -uno
-            git diff
-            exit 1;
-          fi
-          if [ ! $SKIP_TEST ]; then
-            nbdev_test --flags "$FLAGS"
-          fi
+          nbdev_docs
+
+          
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          force_orphan: true
+          publish_dir: ./_docs
+          user_name: github-actions[bot]
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com
