--- a/.github/workflows/test_HGD.yaml
+++ b/.github/workflows/test_HGD.yaml
@@ -33,14 +33,24 @@ jobs:
           mamba install graph-tool
           mamba install hdbscan
           echo $(nbdev_bump_version)
-          nbdev_docs
-
           
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          force_orphan: true
-          publish_dir: ./_docs
-          user_name: github-actions[bot]
-          user_email: 41898282+github-actions[bot]@users.noreply.github.com
+      - name: Test the package
+        shell: bash -l {0}
+        run: | 
+        
+          if [[ `git status --porcelain -uno` ]]; then
+            git status -uno
+            echo -e "!!! Detected unstripped out notebooks\n!!!Remember to run nbdev_install_hooks"
+            echo -e "This error can also happen if you are using an older version of nbdev relative to what is in CI.  Please try to upgrade nbdev with the command `pip install -U nbdev`"
+            false
+          fi
+          nbdev_export
+          if [[ `git status --porcelain -uno` ]]; then
+            echo "::error::Notebooks and library are not in sync.  Please run nbdev_export."
+            git status -uno
+            git diff
+            exit 1;
+          fi
+          if [ ! $SKIP_TEST ]; then
+            nbdev_test --flags "$FLAGS"
+          fi
