install nbdev from pip

--- a/.github/workflows/test_HGD.yaml
+++ b/.github/workflows/test_HGD.yaml
@@ -33,6 +33,7 @@ jobs:
           mamba install graph-tool
           mamba install hdbscan
           echo $(nbdev_bump_version)
+          pip install -U nbdev
           
       - name: Test the package
         shell: bash -l {0}
