publis in the same file as test

--- a/.github/workflows/test_HGD.yaml
+++ b/.github/workflows/test_HGD.yaml
@@ -52,5 +52,6 @@ jobs:
           force_orphan: true
           publish_dir: ./docs
           user_name: github-actions[bot]
-          user_email: 41898282+github-actions[bot]@users.noreply.github.comgithub_token: ${{ secrets.GITHUB_TOKEN }}
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com 
+          github_token: ${{ secrets.GITHUB_TOKEN }}
             
