--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,14 @@ jobs:
       - name: Install Nbdev Dependencies and package dependencies
         shell: bash -el {0}
         run: |
-          mamba install fastai::nbdev 
+          mamba install pip
+          pip install -Uq git+https://github.com/fastai/ghapi.git # you need this for enablin>
+          pip install -Uq git+https://github.com/fastai/fastcore.git
+          pip install -Uq git+https://github.com/fastai/execnb.git
+          pip install -U git+https://github.com/fastai/nbdev.git
+          wget -nv https://www.quarto.org/download/latest/quarto-linux-amd64.deb
+          sudo dpkg -i quarto*.deb
+
           mamba install cgal
           mamba install matplotlib
           mamba install setuptools
@@ -34,18 +41,18 @@ jobs:
           mamba install kneed
           mamba install graph-tool
           mamba install hdbscan
-      - name: Build documentation
+          pip install -e ".[dev]"
+          echo $(nbdev_bump_version)   
+
+      - name: Build the doumentation
         shell: bash -l {0}
-        run: |
-          nbdev_docs
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+        run: | 
+          nbdev_docs 
+      - name: Render and Publish 
+        uses: quarto-dev/quarto-actions/publish@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force_orphan: true
-          publish_dir: ./_docs
-          # The following lines assign commit authorship to the official GH-Actions bot for deploys to `gh-pages` branch.
-          # You can swap them out with your own user credentials.
+          publish_dir: ./docs
           user_name: github-actions[bot]
-          user_email: 41898282+github-actions[bot]@users.noreply.github.com
-
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com       
