--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 repo = HierarchicalGeoClustering
 lib_name = HierarchicalGeoClustering
-version = 0.0.4
+version = 0.0.5
 min_python = 3.10
 license = apache2
 black_formatting = False
@@ -32,4 +32,6 @@ allowed_cell_metadata_keys =
 jupyter_hooks = False
 clear_all = False
 cell_number = True
+clean_ids = True
+skip_procs = 
 
