--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,7 +46,7 @@ jobs:
       - name: Build the doumentation
         shell: bash -l {0}
         run: | 
-          nbdev_docs
+          nbdev_docs --n_workers=1
           echo "Ya se hizo la documentacion"
       - name: Render and Publish 
         uses: quarto-dev/quarto-actions/publish@v2
