--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -54,6 +54,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force_orphan: true
-          publish_dir: /docs
+          publish_dir: ./docs
           user_name: github-actions[bot]
-          user_email: 41898282+github-actions[bot]@users.noreply.github.com       
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com
+          ta
